feat: aprimora configuração e testes do serviço de WhatsApp
Este commit inclui as seguintes alterações:

- Atualiza a configuração do TestWhatsappConfig para injetar o MessageService, permitindo o processamento de status de mensagens.
- Refatora o TestWhatsappService para lidar com atualizações de status de mensagens, incluindo a verificação de status de entrega e leitura.
- Adiciona novos testes de integração no WhatsappWebhookControllerIT para validar o processamento de múltiplas mensagens de clientes simultaneamente e a análise de intenções complexas.
- Introduz novos testes unitários para os serviços de Conversation e Customer, garantindo a integridade das operações de gerenciamento de conversas e clientes.
- Melhora a lógica de tratamento de exceções e a clareza dos testes, assegurando que o sistema responda adequadamente a diferentes cenários de uso.